--- a/estilos.css
+++ b/estilos.css
@@ -1,186 +1,123 @@
-#principal{
-	width: 900px;
-	height: auto; overflow: hidden;
-	border: 0px solid #000;
-	margin: auto;
-
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-header{
-	width: 900px;
-	height: 100px;
-	border: 0px solid #000;
+body {
+    background: url(../img/bg2.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: Roboto;
 }
 
-#logo{
-	width: 200px;
-	height: 100px;
-	border: 0px solid #000;
-	float: left; font-family: sans-serif;
+.contenedor-form {
+    background: rgba(0,0,0,.7);
+    max-width: 500px;
+    width: 100%;
+    margin: 48px auto;
+    border-radius: 5px;
+    color: #fff;
+    position: relative;
+    /*padding: 40px;*/
 }
 
-.titulo{
-	margin-top: 25px;
-	font-size: 30px;
+.contenedor-form .toggle {
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    width: 100px;
+    height: 30px;
+    font-size: 12px;
+    line-height: 25px;
+    text-align: center;
+    border-top: 2px solid #ff851b;
+    border-bottom: 2px solid #ff851b;
+    cursor: pointer;
+    transition: all .5s ease;
 }
 
-.sub-titulo{
-	font-size: 14px;
-	margin-top: -20px;
+.contenedor-form .toggle:hover {
+    border-top: 2px solid #0075d9;
+    border-bottom: 2px solid #0075d9;
 }
 
-.menu{
-	width: 460px;
-	height: 40px;
-	border: 1px solid #ccc;
-	float: right;
-	margin-top: 40px;
-	background: #006699;
+.contenedor-form .toggle span {
+    letter-spacing: 1px;
 }
 
-.menu ul{}
-
-.menu ul li{
-	list-style: none;
-	float: left;
+.contenedor-form h2 {
+    margin: 0 0 28px 0;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1;
+}
+.contenedor-form input[type="text"],
+.contenedor-form input[type="password"],
+.contenedor-form input[type="email"] {
+    outline: none;
+    display: block;
+    width: 100%;
+    padding: 10px 15px;
+    margin: 0 0 20px 0;
+    background: rgba(0,0,0,.5);
+    color: #fff;
+    border: none;
+    border-radius: 2px;
+    border-bottom: 4px solid #ff851b;
+    box-sizing: border-box;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight:normal;
+    transition: all .5s ease;
 }
 
-.menu ul li a{
-	text-decoration: none;
-	padding: 10px 15px;
-	border: 0px solid #ccc;
-	color: #fff; 
+.contenedor-form input[type="text"]:focus,
+.contenedor-form input[type="password"]:focus,
+.contenedor-form input[type="email"]:focus {
+    border-bottom: 4px solid #0075d9;
 }
 
-.menu ul li a:hover{
-	background: #fff;
-	color: #006699;
-	transition: background 1s, color 1s;
+.contenedor-form input[type="submit"] {
+    background: #FF851B;
+    color: #FFF;
+    width: 100%;
+    border: none;
+    padding: 10px 0;
+    font-size: 16px;
+    font-weight: normal;
+    font-family: Roboto;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: all .5s ease;
 }
 
-#slide{
-	margin-top: -5px;
-	width: 900px;
-	height: 250px;
+.contenedor-form input[type="submit"]:hover {
+    background: rgba(0, 117, 217, 0.7);
 }
 
-#categorias{
-	width: 900px;
-	height: auto; overflow: hidden;
-	border: 0px solid;
-	margin-top: 15px;
+.contenedor-form .reset-password {
+    background: rgba(0, 117, 217, .7);
+    width: 100%;
+    padding: 15px 0;
+    text-align: center;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
-.uno{
-	width: 280px;
-	height: auto; overflow: hidden;
-	border: 1px solid #ccc;
-	float: left;
-	padding: 5px;
-	text-align: center;
-	color: #4682b4;
+.contenedor-form .reset-password a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
 }
 
-.parrafo{
-	color: #707070;
-	text-align: justify;
-}
-.dos{
-	margin-left: 12px;
-	margin-right: 12px;
+.contenedor-form .formulario {
+    display: none;
+    padding: 40px;
 }
 
-.leer-mas{
-	text-decoration: none;
-	border: 1px solid #006699;
-	padding: 10px 20px 10px 20px;
-	margin-bottom: 10px;
-}
-
-.leer-mas:hover{
-	background: #006699;
-	color: #fff;
-	transition: background 1s, color 1s;
-}
-
-
-#info{
-	width: 900px;
-	height: auto; overflow: hidden;
-	border: 0px solid #c0c0c0;
-	margin-top: 10px; color: 
-}
-
-#izq{
-	width: 585px;
-	height: auto; overflow: hidden;
-	border: 1px solid #ccc;
-	float: left;
-	padding: 5px; color: #4682b4;
-}
-
-.img{
-	margin-right: 7px;
-	margin-bottom: 7px;
-}
-
-
-#der{
-	width: 290px;
-	height: 300px;
-	border: 1px solid #ccc;
-	float: right;
-	color: 
-}
-
-footer{
-	width: 900px;
-	height: 100px;
-	text-align: center;
-}
-
-#footer p{
-	width: 500px;
-}
-
-/*------------contacto------------------------*/
-#formulario{
-	width: 432px;
-	height: auto;
-	overflow: hidden;
-	border: 1px solid #ccc;
-	padding: 5px;
-	float: left
-}
-
-#mapa{
-	width: 432px;
-	height: auto;
-	overflow: hidden;
-	border: 1px solid #ccc;
-	padding: 5px;
-	float: right;
-}
-
-input[type="text"]{
-	border: 1px solid #c1c1c1; padding: 6px;
-	width: 97%;
-}
-
-textarea{
-	border: 1px solid #c1c1c1; padding: 6px;
-	width: 97%;
-}
-
-.enviar{
-	padding: 10px 20px;
-	background: #006699;
-	color: #fdfdfd;
-	font-size: 16px;
-}
-
-#form{}
-
-#datos{
-	margin-top: 30px;
+.contenedor-form .formulario:nth-child(2) {
+    display: block;
 }
